Correct grammar in introduction paragraph

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <div class="mt-6 max-w-2xl rounded-2xl border bg-white/70 backdrop-blur p-4 shadow-sm">
             <h3 class="font-semibold mb-2">Design Idea</h3>
             <p class="text-sm text-slate-700">
-              My name is Hsuan-Jun Lin which is the Computer Science Major Students in ASU. I built this project to visualize how energy flows through daily life,
+              My name is Hsuan-Jun Lin, and I am a Computer Science Major Students at ASU. I built this project to visualize how energy flows through daily life,
               combining science concepts with interactive design.
             </p>
           </div>
